// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Can successfully get response from request handler "search-media" of source "example-source" 1`] = `
{
  "media": [
    {
      "files": [],
      "id": "1-a",
      "mediaFinderSource": "example-source",
      "title": "Media Title",
    },
  ],
  "page": {
    "isLastPage": false,
    "pageFetchLimitReached": false,
    "pageNumber": 1,
    "paginationType": "offset",
  },
  "request": {
    "pageNumber": 1,
    "queryType": "search-media",
    "searchText": "search text",
    "source": "example-source",
  },
}
`;

exports[`Can successfully get response from request handler "search-media" of source "example-source" 2`] = `
{
  "media": [
    {
      "files": [],
      "id": "2-a",
      "mediaFinderSource": "example-source",
      "title": "Media Title",
    },
  ],
  "page": {
    "isLastPage": true,
    "pageFetchLimitReached": false,
    "pageNumber": 2,
    "paginationType": "offset",
  },
  "request": {
    "pageNumber": 2,
    "queryType": "search-media",
    "searchText": "search text",
    "source": "example-source",
  },
}
`;

exports[`Can successfully get response from request handler "search-media" of source "example-source" 3`] = `null`;

exports[`Can successfully get response from request handler "single-media" of source "example-source" 1`] = `
{
  "media": [
    {
      "files": [],
      "id": "1234",
      "mediaFinderSource": "example-source",
      "title": "Example Domain",
    },
  ],
  "request": {
    "id": "test-getWebpage",
    "queryType": "single-media",
    "source": "example-source",
  },
}
`;
